--- a/EjerciciosSebesta.tex
+++ b/EjerciciosSebesta.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt,oneside]{article}
 \usepackage{geometry}                                % See geometry.pdf to learn the layout options. There are lots.
+\usepackage{listings}				% Permite utilizar lenguajes de programacion dentro de latex
 \geometry{a4paper}                                           % ... or a4paper or a5paper or ... 
 %\geometry{landscape}                                % Activate for for rotated page geometry
 %\usepackage[parfill]{parskip}                    % Activate to begin paragraphs with an empty line rather than an indent
@@ -25,9 +26,9 @@ Las respuestas propuestas en este repositorio son producto del trabajo de los es
 
 \section{Preguntas y Respuestas}
 
-\subsection{Capítulo 5: Nombres, Enlaces y Alcances}
+\subsection{Capítulo 5: Nombres, Enlaces y Alcances.}
 \input{c5p4}
-\input{c5p5}
+%\input{c5p5}
 Capitulo 5 pregunta 5
 En caso de querer llamar en nuestro programa números pseudoaleatorios, que han sido generados por un subprograma se necesita del history-sensitivy para almacenar la última iteración de la variable localmente. 
 Ejemplo de un subprograma generando numeros pseudoaleatorios:
@@ -43,6 +44,9 @@ Ejemplo de un subprograma generando numeros pseudoaleatorios:
         serieAleatoria.set(i, numAleatorio.nextInt(1000) );
 
          \}
+\subsection{Capítulo 7: Expresiones y Asignaciones de sentencias.}
+\input{c7p1}
+
 %\input{c5p6}
 %\input{c5p7}
 
