--- a/EjerciciosSebesta.tex
+++ b/EjerciciosSebesta.tex
@@ -12,6 +12,7 @@
 \usepackage[T1]{fontenc}                                % Asegura que el documento resultante use caracteres de una fuente apropiada.
 
 \usepackage{hyperref}                                % Permite poner urls y links dentro del documento
+\usepackage{listings}
 
 \title{Ejercicios de Programación - Sebesta}
 \author{Lenguajes de Programación - ESPOL}
@@ -26,7 +27,7 @@ Las respuestas propuestas en este repositorio son producto del trabajo de los es
 \section{Preguntas y Respuestas}
 
 \subsection{Capítulo 5: Nombres, Enlaces y Alcances}
-\input{c5p4}
+%\input{c5p4}
 \input{c5p5}
 Capitulo 5 pregunta 5
 En caso de querer llamar en nuestro programa números pseudoaleatorios, que han sido generados por un subprograma se necesita del history-sensitivy para almacenar la última iteración de la variable localmente. 
@@ -45,11 +46,52 @@ Ejemplo de un subprograma generando numeros pseudoaleatorios:
          \}
 %\input{c5p6}
 %\input{c5p7}
+\subsection{Capítulo 8: Statement-Level Control Structures}
+\begin{itemize}
+\item {\bf Pregunta 4} \\\\
+Pros y contras de usar palabras únicas de cierre en sentencias compuestas. \\\\
+{\bf Pros:}\\
+Legibilidad: Cuando vemos un endif o endwhile en un programa escrito por alguien más, es claro ver que bloque finaliza.\\
+Usando llaves {} es menos claro sobre todo cuando el bloque cubre muchas líneas de código y hay bastantes laves.\\
+Llaves son mucho más difícil de leer, en particular para saber donde el bloque termina.\\
+Ej:
+\begin{lstlisting}[frame=single]  % Start your code-block
+using System;
+ if ( <expression1> )
+	if ( <expression2> )
+		<stmt>
+else
+	<stmt2>
+\end{lstlisting}
+A cuál if pertenece else? Con el uso de endif, no hay incoveniente. Por ejemplo:\\
+\begin{lstlisting}[frame=single]  % Start your code-block
+using System;
+if (<expression1>) then 			
+	if (<expression2>) 							
+		<stmt1> 								
+	endif 								
+else 										
+	<stmt2>							
+\end{lstlisting}
+\begin{lstlisting}[frame=single]  % Start your code-block
+using System;
+if (<expression1>) then
+	if (<expression2>)
+		<stmt1> 								
+else
+	<stmt2>
+endif
+\end{lstlisting}
 
+{\bf Cons:} 
+Capacidad de escritura: El uso de palabras reservadas significa que hay más palabras reservadas; por lo tanto menos palabras disponibles para el programador.\\
+Esto también quiere decir que hay más palabras por aprender; caso contrario nos limitaríamos a unas cuanttas palabras reservadas.
+\end{itemize}
 % Continuar con los siguientes capítulos y ejercicios:
 % Ch6: 1, 2, 7
 % Ch7: 1 - 6, 9
 % Ch8: 3, 4, 5
+
 % Ch9: 1, 5
 % Recuerden que todos corresponden a las secciones de "Programming Exercises".
 
