agregando pregunta6 del capitulo 5

--- a/EjerciciosSebesta.tex
+++ b/EjerciciosSebesta.tex
@@ -12,7 +12,7 @@
 \usepackage[T1]{fontenc}                                % Asegura que el documento resultante use caracteres de una fuente apropiada.
 
 \usepackage{hyperref}                                % Permite poner urls y links dentro del documento
-
+\usepackage{listings}
 \title{Ejercicios de Programación - Sebesta}
 \author{Lenguajes de Programación - ESPOL}
 %\date{}                                                        % Activate to display a given date or no date
@@ -27,7 +27,7 @@ Las respuestas propuestas en este repositorio son producto del trabajo de los es
 
 \subsection{Capítulo 5: Nombres, Enlaces y Alcances}
 \input{c5p4}
-\input{c5p5}
+%\input{c5p5}
 Capitulo 5 pregunta 5
 En caso de querer llamar en nuestro programa números pseudoaleatorios, que han sido generados por un subprograma se necesita del history-sensitivy para almacenar la última iteración de la variable localmente. 
 Ejemplo de un subprograma generando numeros pseudoaleatorios:
@@ -43,7 +43,7 @@ Ejemplo de un subprograma generando numeros pseudoaleatorios:
         serieAleatoria.set(i, numAleatorio.nextInt(1000) );
 
          \}
-%\input{c5p6}
+\input{c5p6}
 %\input{c5p7}
 
 % Continuar con los siguientes capítulos y ejercicios:
