agregando pregunta6 del capitulo 5

--- a/EjerciciosSebesta.tex
+++ b/EjerciciosSebesta.tex
@@ -30,7 +30,7 @@ Las respuestas propuestas en este repositorio son producto del trabajo de los es
 \subsection{Capítulo 5: Nombres, Enlaces y Alcances.}
 \input{c5p4}
 \input{c5p5}
-
+\input{c5p6}
 \subsection{Capítulo 9: SubProgramas.}
 \input{c9p4}
 %\input{c5p6}
