--- a/EjerciciosSebesta.tex
+++ b/EjerciciosSebesta.tex
@@ -32,9 +32,6 @@ Las respuestas propuestas en este repositorio son producto del trabajo de los es
 \input{c5p4}
 \input{c5p5}
 \input{c5p6}
-\subsection{Capítulo 9: SubProgramas.}
-\input{c9p4}
-%\input{c5p6}
 \subsection{Capítulo 7: Expressions and Assignment Statements}
 \begin{itemize}
 \item {\bf Pregunta 3} \\\\
@@ -42,7 +39,7 @@ Escribe un programa en tu lenguaje favorito que determine y muestre la precedenc
 Lenguaje Java\\
 \begin{lstlisting}[frame=single]  % Start your code-block
 using System;
-public static void main(String[] args) {
+public static void main(String[] args) \{
         
         float a,b,c,d,e,res1,res2, res3;
         res1=res2=res3=0;
@@ -54,13 +51,13 @@ public static void main(String[] args) {
         e=0;
         res1=a/b*c+d;
         res2=a*b/c+d;
-        if(e!=0){
+        if(e!=0)\{
             res3=e*b*(c+d);
-        }
+        \}
         System.out.println("El resultado 1 es: "+res1);
         System.out.println("El resultado 2 es: "+res2);
         System.out.println("El resultado 3 es: "+res3);
-
+\}
 
 \end{lstlisting}
 
@@ -77,10 +74,102 @@ OUTPUT\\
 El resultado 1 es: 11.0\\
 El resultado 2 es: 15.666667\\
 El resultado 3 es: 0.0\\
+
+\item {\bf Pregunta 4} \\\\
+Escribir un programa en Java que exponga la regla para el orden de evaluación de operando cuando uno de los operandos es un método call.\\
+Lenguaje Java\\
+\begin{lstlisting}[frame=single]  % Start your code-block
+public class JavaApplication2 \{
+    final static int num=5;
+    static int a=5;
+    /**
+     * @param args the command line arguments
+     */
+    public static void main(String[] args) \{
         
+          a = fun1()+a; 
+          System.out.println(a); 
+    \}
+
+    static int fun1() \{
+            a = 17;
+            return 3;
+       \}
+
+\}
+
+\end{lstlisting}
+OUTPUT\\
+20\\
+Como podemos ver en el main en la 1era linea, fun1() retorna 3 y actualiza la variable global 'a'=17 y luego suma 17+3 asignando 20 a 'a'. Esto se debe a que en JAVA el operador '+' tiene asociatividad desde la izquierda.\\
+En cambio si fuese:  a = a + fun1();. En este caso primero 'a'=5 + fun1() que retorne 3; dando una asignación de 8 a la variable a.
+
+\item {\bf Pregunta 5} \\\\
+Lenguaje C++
+\begin{lstlisting}[frame=single]  % Start your code-block
+#include<stdio.h>
+#include<conio.h>
+#include<stdlib.h>
+#include<windows.h>
+#include<math.h>
+
+int fun1();
+
+extern int a = 10;
+void main()\{
+	
+	a = fun1()+a;  // a = a+fun1();
+	printf("\%d", a);
+	getch();
+\}
+
+int fun1() \{
+	a = 17;
+	return 3;
+\}
+\end{lstlisting}
+
+OUTPUT\\
+20\\
+Como podemos ver en el main en la 1era linea, comparado con JAVA Y Si Shard en vez de que fun1() retorne 3 y actualize la variable global 'a' a 17,y luego sumarlos y asignarle 20 a 'a'. En C++, sea a = fun1()+a  ó  a = a+fun1(), llamado de función en la izq o derecha del operador en este caso '+'; siempre al llamar fun1(), este va actualizar la variable global a =17 y luego va sumarle 3, asignando un valor de 20 a  la variable 'a'. 
+
+
+\item {\bf Pregunta 6} \\\\
+Lenguaje Si Sharp\\
+\begin{lstlisting}[frame=single]  % Start your code-block
+class Program
+    \{
+        static int a = 5;
+        static void Main(string[] args)
+        \{
+            a = a +fun1();
+            Console.WriteLine(a);
+            Console.ReadLine();
+       \}
+
+        static int fun1()
+        \{
+            a = 17;
+            return 3;
+        \}
+    }
+\end{lstlisting}
+OUTPUT\\
+8\\ 
+Como podemos ver en Si Sharp también se cumple la regla de la asociativad. En este caso el operador '+' asoicativdad desde la izquierda. Primero a=5, luego le suma 3; cuyo resultado que es 8 se le asigna a la variable a.\\
+En cambio si fuese:  a = fun1()+a. En ese caso fun1() retorna 3 y actualiza la variable global 'a'=17 y luego suma 17+3 asignando 20 a la varaible a.
 
 
 \end{itemize}
+
+\subsection{Capítulo 9: SubProgramas.}
+\input{c9p4}
+%\input{c5p6}
+
+        
+
+
+
 
 % Continuar con los siguientes capítulos y ejercicios:
 % Ch6: 1, 2, 7
