--- a/EjerciciosSebesta.tex
+++ b/EjerciciosSebesta.tex
@@ -32,6 +32,7 @@ Las respuestas propuestas en este repositorio son producto del trabajo de los es
 \input{c5p4}
 \input{c5p5}
 \input{c5p6}
+\input{c5p7}
 \subsection{Capítulo 7: Expressions and Assignment Statements}
 \begin{itemize}
 \item {\bf Pregunta 3} \\\\
