Corrigiendo error de dimensión del arreglo a 10000

--- a/c5p7.tex
+++ b/c5p7.tex
@@ -3,17 +3,18 @@ estatica, otra stack y la ultima declaracion como heap}
 
 \begin{verbatim}
 STACK 
+#define MAX 10000
 int main (int argc, char *argv[])
 {
- 
-  int arreglo[3000];
+  
+  int arreglo[MAX];
   int i;
   srand(time(NULL));
 
-  for(i=0;i<2999;i++)
+  for(i=0;i<MAX-1;i++)
   arreglo[i]=1+rand()%100;
 
-  for(i=0;i<2999;i++){
+  for(i=0;i<MAX-1;i++){
   int doble;
   doble=arreglo[i]*2;
   printf("El doble del numero aleatorio en la posicion %d manejado por pila es: %d\n",i,doble);
@@ -23,26 +24,27 @@ int main (int argc, char *argv[])
 }
 
 HEAP
+#define MAX 10000
 int main (int argc, char *argv[])
 {
  
-  int arreglo[3000]; 
+  int arreglo[<MAX-1]; 
   int i;
   int *p;
   srand(time(NULL));
   
 
 
-  for(i=0;i<2999;i++){
-  p= (int *)malloc(3000*sizeof(int));
+  for(i=0;i<<MAX-1;i++){
+  p= (int *)malloc(10000*sizeof(int));
   arreglo[i]=1+rand()%100;
   *p=arreglo[i];
   }
  
 
-  for(i=0;i<2999;i++){
+  for(i=0;i<<MAX-1;i++){
   int doble;
-  p= (int *)malloc(3000*sizeof(int));
+  p= (int *)malloc(10000*sizeof(int));
   *p=arreglo[i];
   doble=*p*2;
   printf("El doble del numero aleatorio en la posicion %d manejado por heap es: %d\n",i,doble);
@@ -58,14 +60,14 @@ STATIC
 int main (int argc, char *argv[])
 {
  
-  static int arreglo[3000];
+  static int arreglo[10000];
   int i;
   srand(time(NULL));
 
-  for(i=0;i<2999;i++)
+  for(i=0;i<10000-1;i++)
   arreglo[i]=1+rand()%100;
 
-  for(i=0;i<2999;i++){
+  for(i=0;i<10000-1;i++){
   int doble;
   doble=arreglo[i]*2;
   printf("El doble del numero aleatorio en la posicion %d con arreglo estatico es: %d\n",i,doble);
@@ -75,7 +77,7 @@ int main (int argc, char *argv[])
 }
 
 \end{verbatim}
-Stack tiene un aceso mas rapido, el espacio es manejado por el CPU es limitado y no puede ser redefinido.\\
+Stack tiene un acceso mas rapido, el espacio es manejado por el CPU es limitado y no puede ser redefinido.\\
 En el caso del heap nosotros necesitamos manejar la memoria, acceso mas lento y no es limitado\\
 Static declaracion unica de una variable que mantiene su dimension a lo largo del tiempo de vida del programa.
 
