--- a/EjerciciosSebesta.tex
+++ b/EjerciciosSebesta.tex
@@ -34,6 +34,7 @@ Las respuestas propuestas en este repositorio son producto del trabajo de los es
 \input{c5p6}
 \input{c5p7}
 \subsection{Capítulo 7: Expressions and Assignment Statements}
+\input{c7p2}
 \begin{itemize}
 \item {\bf Pregunta 3} \\\\
 Escribe un programa en tu lenguaje favorito que determine y muestre la precedencia y asociatividad de sus operadores aritmeticos y booleanos.\\
